# home-assistant-compool

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  debug_entity_ids.py  hacs.json  manifest.toml  pyproject.toml  requirements.txt  test_connection.py
.claude/commands/: major-release.md  minor-release.md  patch-release.md
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  release.yml
config/: configuration.yaml
custom_components/compool/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/compool/translations/: en.json
scripts/: lint  test
tests/: conftest.py  const.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
